# openai-sdk

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
src/openai_sdk/: __about__.py  __init__.py
tests/: __init__.py
